# fastapi_microshop

./: items_views.py  main.py  models.py  pyproject.toml
users/: views.py
